# vehicle

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  database.py  download_images.py  main.py  models.py  schemas.py  seed.py
app/agent/: __init__.py  sql_agent.py
app/api/: routes.py
app/classifier/: __init__.py  vehicle_classifier.py
frontend/: app.py  index.html
tests/: conftest.py  test_agent.py  test_api.py  test_classifier.py  test_demo_samples.py  test_edge_cases.py
